Split keystore into truststore and keystore
Signed-off-by: Simon Vacek <simonvacky@email.cz>